src/tests/fixtures/input_type_one_of/oneOfFieldMissingTypeAnnotation.invalid.ts.expected
-----------------
INPUT
----------------- 
/**
 * @gqlInput
 * @oneOf
 */
export type Greeting = { firstName: string } | { lastName };

-----------------
OUTPUT
-----------------
src/tests/fixtures/input_type_one_of/oneOfFieldMissingTypeAnnotation.invalid.ts:5:50 - error: Expected each property of a @oneOf @gqlInput to have a type annotation.

5 export type Greeting = { firstName: string } | { lastName };
                                                   ~~~~~~~~
